v4.1.2/_sources/plugins/projects_details_info_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-entry
.. role:: ansible-option-default
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.dnac.projects_details_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.projects_details_info -- Information module for Projects Details
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 4.1.2).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.projects_details_info`.

.. version_added

.. versionadded:: 4.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Projects Details.
- Get project(s) details.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk >= 2.4.0
- python >= 3.5


.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **dnac_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco DNA Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-default-bold:`no` :ansible-option-default:`← (default)`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **dnac_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **dnac_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **dnac_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-dnac_username:
      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-user:

      .. rst-class:: ansible-option-title

      **dnac_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **dnac_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **dnac_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco DNA Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.2.3.3"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-headers"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-headers:

      .. rst-class:: ansible-option-title

      **headers**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Additional headers.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Id query parameter. Id of project to be searched.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-limit"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-limit:

      .. rst-class:: ansible-option-title

      **limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Limit query parameter. Limits number of results.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-name"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-name:

      .. rst-class:: ansible-option-title

      **name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Name query parameter. Name of project to be searched.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-offset"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-offset:

      .. rst-class:: ansible-option-title

      **offset**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-offset" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Offset query parameter. Index of first result.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortOrder"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-sortOrder:

      .. rst-class:: ansible-option-title

      **sortOrder**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortOrder" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SortOrder query parameter. Sort Order Ascending (asc) or Descending (dsc).


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco DNA Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are configuration_templates.ConfigurationTemplates.get_projects_details
   - Paths used are get /dna/intent/api/v2/template-programmer/project
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco DNAC SDK
   - The parameters starting with dnac_ are used by the Cisco DNAC Python SDK to establish the connection

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Projects Details
      cisco.dnac.projects_details_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        headers:
          custom: value
        id: string
        name: string
        offset: 0
        limit: 0
        sortOrder: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-dnac_response"></div>

      .. _ansible_collections.cisco.dnac.projects_details_info_module__return-dnac_response:

      .. rst-class:: ansible-option-title

      **dnac_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco DNAC Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "{\\n  \\"response\\": [\\n    {\\n      \\"createTime\\": 0,\\n      \\"description\\": \\"string\\",\\n      \\"id\\": \\"string\\",\\n      \\"isDeletable\\": true,\\n      \\"lastUpdateTime\\": 0,\\n      \\"name\\": \\"string\\",\\n      \\"tags\\": [\\n        {\\n          \\"id\\": \\"string\\",\\n          \\"name\\": \\"string\\"\\n        }\\n      ],\\n      \\"templates\\": [\\n        {\\n          \\"tags\\": [\\n            {\\n              \\"id\\": \\"string\\",\\n              \\"name\\": \\"string\\"\\n            }\\n          ],\\n          \\"author\\": \\"string\\",\\n          \\"composite\\": true,\\n          \\"containingTemplates\\": [\\n            {\\n              \\"tags\\": [\\n                {\\n                  \\"id\\": \\"string\\",\\n                  \\"name\\": \\"string\\"\\n                }\\n              ],\\n              \\"composite\\": true,\\n              \\"description\\": \\"string\\",\\n              \\"deviceTypes\\": [\\n                {\\n                  \\"productFamily\\": \\"string\\",\\n                  \\"productSeries\\": \\"string\\",\\n                  \\"productType\\": \\"string\\"\\n                }\\n              ],\\n              \\"id\\": \\"string\\",\\n              \\"language\\": \\"string\\",\\n              \\"name\\": \\"string\\",\\n              \\"projectName\\": \\"string\\",\\n              \\"rollbackTemplateParams\\": [\\n                {\\n                  \\"binding\\": \\"string\\",\\n                  \\"customOrder\\": 0,\\n                  \\"dataType\\": \\"string\\",\\n                  \\"defaultValue\\": \\"string\\",\\n                  \\"description\\": \\"string\\",\\n                  \\"displayName\\": \\"string\\",\\n                  \\"group\\": \\"string\\",\\n                  \\"id\\": \\"string\\",\\n                  \\"instructionText\\": \\"string\\",\\n                  \\"key\\": \\"string\\",\\n                  \\"notParam\\": true,\\n                  \\"order\\": 0,\\n                  \\"paramArray\\": true,\\n                  \\"parameterName\\": \\"string\\",\\n                  \\"provider\\": \\"string\\",\\n                  \\"range\\": [\\n                    {\\n                      \\"id\\": \\"string\\",\\n                      \\"maxValue\\": 0,\\n                      \\"minValue\\": 0\\n                    }\\n                  ],\\n                  \\"required\\": true,\\n                  \\"selection\\": {\\n                    \\"defaultSelectedValues\\": [\\n                      \\"string\\"\\n                    ],\\n                    \\"id\\": \\"string\\",\\n                    \\"selectionType\\": \\"string\\",\\n                    \\"selectionValues\\": {}\\n                  }\\n                }\\n              ],\\n              \\"templateContent\\": \\"string\\",\\n              \\"templateParams\\": [\\n                {\\n                  \\"binding\\": \\"string\\",\\n                  \\"customOrder\\": 0,\\n                  \\"dataType\\": \\"string\\",\\n                  \\"defaultValue\\": \\"string\\",\\n                  \\"description\\": \\"string\\",\\n                  \\"displayName\\": \\"string\\",\\n                  \\"group\\": \\"string\\",\\n                  \\"id\\": \\"string\\",\\n                  \\"instructionText\\": \\"string\\",\\n                  \\"key\\": \\"string\\",\\n                  \\"notParam\\": true,\\n                  \\"order\\": 0,\\n                  \\"paramArray\\": true,\\n                  \\"parameterName\\": \\"string\\",\\n                  \\"provider\\": \\"string\\",\\n                  \\"range\\": [\\n                    {\\n                      \\"id\\": \\"string\\",\\n                      \\"maxValue\\": 0,\\n                      \\"minValue\\": 0\\n                    }\\n                  ],\\n                  \\"required\\": true,\\n                  \\"selection\\": {\\n                    \\"defaultSelectedValues\\": [\\n                      \\"string\\"\\n                    ],\\n                    \\"id\\": \\"string\\",\\n                    \\"selectionType\\": \\"string\\",\\n                    \\"selectionValues\\": {}\\n                  }\\n                }\\n              ],\\n              \\"version\\": \\"string\\"\\n            }\\n          ],\\n          \\"createTime\\": 0,\\n          \\"customParamsOrder\\": true,\\n          \\"description\\": \\"string\\",\\n          \\"deviceTypes\\": [\\n            {\\n              \\"productFamily\\": \\"string\\",\\n              \\"productSeries\\": \\"string\\",\\n              \\"productType\\": \\"string\\"\\n            }\\n          ],\\n          \\"documentDatabase\\": true,\\n          \\"failurePolicy\\": \\"string\\",\\n          \\"id\\": \\"string\\",\\n          \\"language\\": \\"string\\",\\n          \\"lastUpdateTime\\": 0,\\n          \\"latestVersionTime\\": 0,\\n          \\"name\\": \\"string\\",\\n          \\"parentTemplateId\\": \\"string\\",\\n          \\"projectAssociated\\": true,\\n          \\"projectId\\": \\"string\\",\\n          \\"projectName\\": \\"string\\",\\n          \\"rollbackTemplateContent\\": \\"string\\",\\n          \\"rollbackTemplateParams\\": [\\n            {\\n              \\"binding\\": \\"string\\",\\n              \\"customOrder\\": 0,\\n              \\"dataType\\": \\"string\\",\\n              \\"defaultValue\\": \\"string\\",\\n              \\"description\\": \\"string\\",\\n              \\"displayName\\": \\"string\\",\\n              \\"group\\": \\"string\\",\\n              \\"id\\": \\"string\\",\\n              \\"instructionText\\": \\"string\\",\\n              \\"key\\": \\"string\\",\\n              \\"notParam\\": true,\\n              \\"order\\": 0,\\n              \\"paramArray\\": true,\\n              \\"parameterName\\": \\"string\\",\\n              \\"provider\\": \\"string\\",\\n              \\"range\\": [\\n                {\\n                  \\"id\\": \\"string\\",\\n                  \\"maxValue\\": 0,\\n                  \\"minValue\\": 0\\n                }\\n              ],\\n              \\"required\\": true,\\n              \\"selection\\": {\\n                \\"defaultSelectedValues\\": [\\n                  \\"string\\"\\n                ],\\n                \\"id\\": \\"string\\",\\n                \\"selectionType\\": \\"string\\",\\n                \\"selectionValues\\": {}\\n              }\\n            }\\n          ],\\n          \\"softwareType\\": \\"string\\",\\n          \\"softwareVariant\\": \\"string\\",\\n          \\"softwareVersion\\": \\"string\\",\\n          \\"templateContent\\": \\"string\\",\\n          \\"templateParams\\": [\\n            {\\n              \\"binding\\": \\"string\\",\\n              \\"customOrder\\": 0,\\n              \\"dataType\\": \\"string\\",\\n              \\"defaultValue\\": \\"string\\",\\n              \\"description\\": \\"string\\",\\n              \\"displayName\\": \\"string\\",\\n              \\"group\\": \\"string\\",\\n              \\"id\\": \\"string\\",\\n              \\"instructionText\\": \\"string\\",\\n              \\"key\\": \\"string\\",\\n              \\"notParam\\": true,\\n              \\"order\\": 0,\\n              \\"paramArray\\": true,\\n              \\"parameterName\\": \\"string\\",\\n              \\"provider\\": \\"string\\",\\n              \\"range\\": [\\n                {\\n                  \\"id\\": \\"string\\",\\n                  \\"maxValue\\": 0,\\n                  \\"minValue\\": 0\\n                }\\n              ],\\n              \\"required\\": true,\\n              \\"selection\\": {\\n                \\"defaultSelectedValues\\": [\\n                  \\"string\\"\\n                ],\\n                \\"id\\": \\"string\\",\\n                \\"selectionType\\": \\"string\\",\\n                \\"selectionValues\\": {}\\n              }\\n            }\\n          ],\\n          \\"validationErrors\\": {\\n            \\"rollbackTemplateErrors\\": [\\n              {}\\n            ],\\n            \\"templateErrors\\": [\\n              {}\\n            ],\\n            \\"templateId\\": \\"string\\",\\n            \\"templateVersion\\": \\"string\\"\\n          },\\n          \\"version\\": \\"string\\"\\n        }\\n      ]\\n    }\\n  ],\\n  \\"version\\": \\"string\\"\\n}\\n"


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

